<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_screen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:transitionName="fade_in">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_avatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_account"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:contentDescription="@string/register_avatar_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:paddingVertical="12dp"
        android:text="@string/register_btn_title"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/primary_400"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_avatar"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/register_label"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        app:layout_constraintVertical_bias="0.15" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_register"
        android:hint="@string/register_input_placeholder"
        android:paddingHorizontal="14dp"
        android:paddingVertical="10dp"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_label"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintVertical_bias="0.06"
        android:focusableInTouchMode="true" />

    <TextView
        android:id="@+id/register_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_warning"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_input"
        app:layout_constraintVertical_bias="0.05" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:paddingVertical="12dp"
        android:text="@string/register_btn_complete"
        android:textAllCaps="false"
        android:textColor="@color/primary_400"
        android:textSize="16sp"
        app:backgroundTint="@color/white"
        app:strokeColor="@color/primary_400"
        app:strokeWidth="1dp"
        app:cornerRadius="10dp"
        android:drawableEnd="@drawable/ic_next_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_input"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>