<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFFFFF"
        app:cardElevation="4dp"
        app:cardCornerRadius="0dp"
        app:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/scan_btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_back"
                android:background="@color/white"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/button" />

            <TextView
                android:id="@+id/box_banner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="3dp"
                android:text="@string/scan_banner_title"/>

            <ImageButton
                android:id="@+id/box_banner_refresh"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_refresh"
                android:background="@color/white"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/button" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scan_btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            android:text="@string/scan_btn_start"
            android:textColor="@color/white"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/text_connected"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text_connected"
            app:strokeWidth="1dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scan_btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:text="@string/scan_btn_stop"
            android:textColor="@color/text_connected"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text_connected"
            app:strokeWidth="1dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/scan_results_title"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/scan_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorSize="20dp"
            android:indeterminate="false"
            android:layout_marginEnd="10dp"
            app:trackThickness="2dp"
            app:trackColor="#3F7DF5"
            android:visibility="invisible"
            app:indicatorColor="#F2F2F2"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scan_list_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="#00000000"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/scan_no_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:text="@string/scan_no_result"
            android:gravity="center"
            />
    </LinearLayout>

</LinearLayout>